// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScreenreaderText /> with additional className matches its snapshot 1`] = `
<span
  className="y-screenreaderText TEST_CLASSNAME"
>
  test content
</span>
`;

exports[`<ScreenreaderText /> with default options matches its snapshot 1`] = `
<span
  className="y-screenreaderText"
>
  text content
</span>
`;
